--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,23 @@
     <module>tq.java.basic</module>
     <module>tq.java.designmode</module>
     <module>tq.java.concurrent</module>
+    <module>tq.java.rabbitmq</module>
   </modules>
+  
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
+  <build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
