--- a/tq.java.log/pom.xml
+++ b/tq.java.log/pom.xml
@@ -9,7 +9,6 @@
   </parent>
   <groupId>tq.java.log</groupId>
   <artifactId>tq.java.log</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <name>tq.java.log</name>
   <url>http://maven.apache.org</url>
   <properties>
@@ -22,5 +21,13 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    
+    <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.17</version>
+	</dependency>
   </dependencies>
 </project>
