OOM could create new native thread

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>tq.java.log</module>
     <module>tq.java.jvm</module>
     <module>tq.java.note</module>
+    <module>tq.java.arithmetic</module>
   </modules>
   
   <properties>
