--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>tq.java.jvm</module>
     <module>tq.java.note</module>
     <module>tq.java.arithmetic</module>
+    <module>tq.java.linux</module>
   </modules>
   
   <properties>
