how tomcat work

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <module>tq.java.note</module>
     <module>tq.java.arithmetic</module>
     <module>tq.java.linux</module>
+    <module>tq.java.how-tomcat-work</module>
   </modules>
   
   <properties>
