--- a/tq.java.freemarker/pom.xml
+++ b/tq.java.freemarker/pom.xml
@@ -21,5 +21,15 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    
+	<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
+	<dependency>
+	    <groupId>org.freemarker</groupId>
+	    <artifactId>freemarker</artifactId>
+	    <version>2.3.20</version>
+	</dependency>
+
+    
   </dependencies>
 </project>
