--- a/tq.java.json/pom.xml
+++ b/tq.java.json/pom.xml
@@ -23,12 +23,14 @@
     </dependency>
     
     
-    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+	<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
 	<dependency>
-	    <groupId>com.fasterxml.jackson.core</groupId>
-	    <artifactId>jackson-core</artifactId>
-	    <version>2.9.2</version>
+	    <groupId>com.alibaba</groupId>
+	    <artifactId>fastjson</artifactId>
+	    <version>1.2.31</version>
 	</dependency>
+
+
     
   </dependencies>
 </project>
