--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>tq.java.freemarker</module>
     <module>tq.java.thrift</module>
     <module>tq.java.json</module>
+    <module>tq.java.mysql</module>
   </modules>
   
   <properties>
