--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <module>tq.java.note</module>
     <module>tq.java.arithmetic</module>
     <module>tq.java.linux</module>
-    <module>tq.java.how-tomcat-work</module>
+    <module>tq.java.how_tomcat_work</module>
     <module>tq.java.http</module>
     <module>tq.java.freemarker</module>
     <module>tq.java.thrift</module>
