--- a/tq.java.rabbitmq/pom.xml
+++ b/tq.java.rabbitmq/pom.xml
@@ -15,6 +15,14 @@
   
   <dependencies>
 
+    <!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+      <version>3.6.5</version>
+    </dependency>
+
+
   </dependencies>
   
 </project>
