--- a/tq.java.asm/pom.xml
+++ b/tq.java.asm/pom.xml
@@ -12,4 +12,17 @@
     <artifactId>tq.java.asm</artifactId>
 
 
+
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/asm/asm -->
+        <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+    </dependencies>
+
+
+
 </project>
