--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
     <module>tq.java.mysql</module>
     <module>tq.java.mongodb</module>
       <module>tq.java.asm</module>
+      <module>tq.java.tomcat</module>
+      <module>tq.java.netty</module>
   </modules>
   
   <properties>
