--- a/tq.java.mybatis/pom.xml
+++ b/tq.java.mybatis/pom.xml
@@ -12,4 +12,31 @@
     <artifactId>tq.java.mybatis</artifactId>
 
 
+
+
+
+    <dependencies>
+        <!-- 添加log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
+
+        <!-- 添加mybatis -->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.2.6</version>
+        </dependency>
+
+        <!-- 添加mysql驱动 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.12</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
