--- a/tq.java.jvm/pom.xml
+++ b/tq.java.jvm/pom.xml
@@ -15,5 +15,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
+      <version>3.2.0</version>
+    </dependency>
   </dependencies>
 </project>
