--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
       <module>tq.java.mybatis</module>
       <module>tq.java.how.tomcat.work</module>
       <module>tq.java.spring</module>
+      <module>tq.java.Professional Java for Web Applications</module>
+      <module>tq.java.Professional Java for Web Applications</module>
+      <module>tq.java.Professional Java for Web Applications</module>
+      <module>tq.java.Professional.Java.for.Web.Applications</module>
   </modules>
   
   <properties>
