--- a/tq.java.Professional.Java.for.Web.Applications/src/main/webapp/WEB-INF/web.xml
+++ b/tq.java.Professional.Java.for.Web.Applications/src/main/webapp/WEB-INF/web.xml
@@ -6,18 +6,31 @@
 
     <display-name>Hello World Application</display-name>
 
+    <context-param>
+        <param-name>settingOne</param-name>
+        <param-value>foo</param-value>
+    </context-param>
+    <context-param>
+        <param-name>settingTwo</param-name>
+        <param-value>bar</param-value>
+    </context-param>
+
     <servlet>
-        <servlet-name>helloServlet</servlet-name>
-        <servlet-class>com.wrox.HelloServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-
+        <servlet-name>servletParameterServlet</servlet-name>
+        <servlet-class>com.wrox.ServletParameterServlet</servlet-class>
+        <!--
+        <init-param>
+            <param-name>database</param-name>
+            <param-value>CustomerSupport</param-value>
+        </init-param>
+        <init-param>
+            <param-name>server</param-name>
+            <param-value>10.0.12.5</param-value>
+        </init-param> -->
     </servlet>
-    
     <servlet-mapping>
-        <servlet-name>helloServlet</servlet-name>
-        <url-pattern>/greeting</url-pattern>
+        <servlet-name>servletParameterServlet</servlet-name>
+        <url-pattern>/servletParameters</url-pattern>
     </servlet-mapping>
-
-
 </web-app>
         
