--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
       <module>tq.java.Professional Java for Web Applications</module>
       <module>tq.java.Professional Java for Web Applications</module>
       <module>tq.java.Professional.Java.for.Web.Applications</module>
+      <module>tq.java.spring.jie.mi</module>
   </modules>
   
   <properties>
