分布式事务

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
       <module>tq.java.data.structure</module>
       <module>tq.java.tcp.ip</module>
       <module>tq.java.rpc</module>
+      <module>tq.java.distributed.system</module>
   </modules>
   
   <properties>
