--- a/tq.java.spring/pom.xml
+++ b/tq.java.spring/pom.xml
@@ -12,4 +12,24 @@
     <artifactId>tq.java.spring</artifactId>
 
 
+
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>4.3.14.RELEASE</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.14.RELEASE</version>
+        </dependency>
+
+    </dependencies>
+
+
 </project>
