--- a/tq.java.asm/pom.xml
+++ b/tq.java.asm/pom.xml
@@ -15,12 +15,13 @@
 
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/asm/asm -->
+        <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
         <dependency>
-            <groupId>asm</groupId>
+            <groupId>org.ow2.asm</groupId>
             <artifactId>asm</artifactId>
-            <version>3.3.1</version>
+            <version>5.0.4</version>
         </dependency>
+
     </dependencies>
 
 
