1. PlatformTransactionManager 2. spring 事务传播级别

--- a/tq.java.spring/pom.xml
+++ b/tq.java.spring/pom.xml
@@ -28,6 +28,20 @@
             <artifactId>spring-context</artifactId>
             <version>4.3.14.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>4.3.14.RELEASE</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>4.3.14.RELEASE</version>
+        </dependency>
+
+
 
         <!-- https://mvnrepository.com/artifact/aspectj/aspectjrt -->
         <dependency>
