--- a/tq.java.spring.jie.mi/pom.xml
+++ b/tq.java.spring.jie.mi/pom.xml
@@ -31,6 +31,15 @@
             <artifactId>spring-beans</artifactId>
             <version>3.1.1.RELEASE</version>
         </dependency>
+
+        <!-- 添加mysql驱动 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.12</version>
+        </dependency>
+
+
     </dependencies>
 
 
