--- a/tq.java.spring/pom.xml
+++ b/tq.java.spring/pom.xml
@@ -57,6 +57,14 @@
             <version>1.8.13</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+
 
 
     </dependencies>
