--- a/tq.java.redis/pom.xml
+++ b/tq.java.redis/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>tq.java.redis</artifactId>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
