--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
       <module>tq.java.distributed.system</module>
     <module>tq.java.redis</module>
     <module>tq.java.lintcode</module>
+      <module>tq.java.hikaricp</module>
   </modules>
   
   <properties>
