--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <module>tq.java.summarize</module>
       <module>tq.java.effective.java</module>
       <module>tq.java.nginx</module>
+    <module>tq.java.spingboot</module>
   </modules>
   
   <properties>
