--- a/tq.java.spring.jie.mi/pom.xml
+++ b/tq.java.spring.jie.mi/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>cglib</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.5</version>
+        </dependency>
 
 
     </dependencies>
