--- a/tq.java.spring.jie.mi/pom.xml
+++ b/tq.java.spring.jie.mi/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>spring-beans</artifactId>
             <version>3.1.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>3.1.1.RELEASE</version>
+        </dependency>
 
         <!-- 添加mysql驱动 -->
         <dependency>
@@ -48,6 +53,11 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>RELEASE</version>
         </dependency>
 
 
