--- a/tq.java.spring.jie.mi/pom.xml
+++ b/tq.java.spring.jie.mi/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>spring-jdbc</artifactId>
             <version>3.1.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>3.1.1.RELEASE</version>
+        </dependency>
 
         <!-- 添加mysql驱动 -->
         <dependency>
