--- a/tq.java.spring.jie.mi/src/main/resources/log4j.properties
+++ b/tq.java.spring.jie.mi/src/main/resources/log4j.properties
@@ -1,11 +1,8 @@
-log4j.rootLogger=debug, stdout
-# log4j.rootLogger=WARN, stdout, logfile
 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
+log4j.rootLogger = debug,stdout
 
-log4j.appender.logfile=org.apache.log4j.FileAppender
-log4j.appender.logfile.File=target/spring.log
-log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
-log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
+### \u8F93\u51FA\u4FE1\u606F\u5230\u63A7\u5236\u62AC ###
+log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target = System.out
+log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
