--- a/tq.java.spring/pom.xml
+++ b/tq.java.spring/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>spring-jdbc</artifactId>
             <version>4.3.14.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.3.14.RELEASE</version>
+        </dependency>
 
 
         <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
