--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
       <module>tq.java.nginx</module>
       <module>tq.java.undertow</module>
       <module>tq.java.spring.boot</module>
+      <module>tq.java.Hadoop 2.X HDFS</module>
   </modules>
   
   <properties>
