--- a/tq.java.netty/pom.xml
+++ b/tq.java.netty/pom.xml
@@ -52,7 +52,8 @@
                         <manifestEntries>
                             <Main-Class>
                                 <!--_from_web._jianshu_linyuan._1_time_server.Server-->
-                                _netty_in_action._demo._udp.UdpServer
+                                <!--_netty_in_action._demo._udp.UdpServer-->
+                                _netty_in_action._2_first_netty_app.EchoServer
                             </Main-Class>
                         </manifestEntries>
                     </archive>
