--- a/tq.java.distributed.system/pom.xml
+++ b/tq.java.distributed.system/pom.xml
@@ -11,5 +11,25 @@
 
     <artifactId>tq.java.distributed.system</artifactId>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.thrift/libthrift -->
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.10.0</version>
+        </dependency>
+
+
+
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.2</version>
+        </dependency>
+
+    </dependencies>
+
+
 
 </project>
