--- a/tq.java.mongodb/pom.xml
+++ b/tq.java.mongodb/pom.xml
@@ -27,6 +27,11 @@
 	    <artifactId>mongo-java-driver</artifactId>
 	    <version>3.8.2</version>
 	</dependency>
+      <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>fastjson</artifactId>
+          <version>1.2.31</version>
+      </dependency>
     
   </dependencies>
 </project>
