--- a/tq.java.kafka/pom.xml
+++ b/tq.java.kafka/pom.xml
@@ -11,6 +11,20 @@
 
     <artifactId>c</artifactId>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.11</artifactId>
+            <version>0.9.0.1</version>
+        </dependency>
+
+        <!-- 添加log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
+
 
     </dependencies>
 
