--- a/tq.java.kafka/src/main/resources/log4j.properties
+++ b/tq.java.kafka/src/main/resources/log4j.properties
@@ -2,4 +2,4 @@ log4j.rootCategory=debug,stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) -%m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MMM-dd HH:mm:ss,SSS} %5p [%t] (%F:%L) -%m%n
