--- a/tq.java.redis/src/main/java/_redis_development_and_operation/_9_sentry/sentinel.conf
+++ b/tq.java.redis/src/main/java/_redis_development_and_operation/_9_sentry/sentinel.conf
@@ -38,7 +38,7 @@ dir /tmp
 # Tells Sentinel to monitor this master, and to consider it in O_DOWN
 # (Objectively Down) state only if at least <quorum> sentinels agree.
 #
-# Note that whatever is the ODOWN quorum, a Sentinel will require to
+# _spring_boot_docs_2_1_3_RELEASE.Note that whatever is the ODOWN quorum, a Sentinel will require to
 # be elected by the majority of the known Sentinels in order to
 # start a failover, so no failover can be performed in minority.
 #
@@ -48,7 +48,7 @@ dir /tmp
 # Also note that the configuration file is rewritten when a
 # slave is promoted to master.
 #
-# Note: master name should not include special characters or spaces.
+# _spring_boot_docs_2_1_3_RELEASE.Note: master name should not include special characters or spaces.
 # The valid charset is A-z 0-9 and the three characters ".-_".
 sentinel monitor mymaster 127.0.0.1 6379 2
 
@@ -57,7 +57,7 @@ sentinel monitor mymaster 127.0.0.1 6379 2
 # Set the password to use to authenticate with the master and slaves.
 # Useful if there is a password set in the Redis instances to monitor.
 #
-# Note that the master password is also used for slaves, so it is not
+# _spring_boot_docs_2_1_3_RELEASE.Note that the master password is also used for slaves, so it is not
 # possible to set a different password in masters and slaves instances
 # if you want to be able to monitor these instances with Sentinel.
 #
