--- a/tq.java.kafka/pom.xml
+++ b/tq.java.kafka/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>c</artifactId>
+    <artifactId>tq.java.kafka</artifactId>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
         <dependency>
