--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
       <module>tq.java.spring.boot</module>
       <module>tq.java.Hadoop 2.X HDFS</module>
       <module>tq.java.kafka</module>
+      <module>tq.java.flink</module>
   </modules>
   
   <properties>
