--- a/tq.java.thrift/pom.xml
+++ b/tq.java.thrift/pom.xml
@@ -24,11 +24,11 @@
     
     
     <!-- https://mvnrepository.com/artifact/org.apache.thrift/libthrift -->
-	<dependency>
-	    <groupId>org.apache.thrift</groupId>
-	    <artifactId>libthrift</artifactId>
-	    <version>0.10.0</version>
-	</dependency>
+    <dependency>
+      <groupId>org.apache.thrift</groupId>
+      <artifactId>libthrift</artifactId>
+      <version>[0.12.0,)</version>
+    </dependency>
     
   </dependencies>
 </project>
