netty 大文件传输 零拷贝/一块一块

--- a/tq.java.netty/pom.xml
+++ b/tq.java.netty/pom.xml
@@ -53,7 +53,8 @@
                             <Main-Class>
                                 <!--_from_web._jianshu_linyuan._1_time_server.Server-->
                                 <!--_netty_in_action._demo._udp.UdpServer-->
-                                _netty_in_action._2_first_netty_app.EchoServer
+                                <!--_netty_in_action._2_first_netty_app.EchoServer-->
+                                _other._chunked.HttpFileServer
                             </Main-Class>
                         </manifestEntries>
                     </archive>
