--- a/tq.java.flink/src/main/resources/log4j.properties
+++ b/tq.java.flink/src/main/resources/log4j.properties
@@ -1,16 +1,5 @@
-### \u8BBE\u7F6E###
-log4j.rootLogger=TRACE,I,stdout
-### \u8F93\u51FAINFO \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7 ###
-log4j.appender.I=ct.dc.liblogs.appender.RollingFileWithDateAppender
-log4j.appender.I.Append=true
-log4j.appender.I.Threshold=INFO
-log4j.appender.I.MaxFileSize=10MB
-log4j.appender.I.MaxBackupIndex=10
-log4j.appender.I.layout=org.apache.log4j.PatternLayout
-log4j.appender.I.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+log4j.rootLogger=INFO, console
 
-
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Threshold=info
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %-60c %x - %m%n
