--- a/tq.java.spring.boot/src/main/resources/config/source.properties
+++ b/tq.java.spring.boot/src/main/resources/config/source.properties
@@ -1,5 +1,5 @@
 # mysql
-source.driverClassName = com.mysql.jdbc.Driver
-source.url = jdbc:mysql://192.168.1.82:3306/springboot_db
-source.username = root
-source.password = 333dkx8s
+#source.driverClassName = com.mysql.jdbc.Driver
+#source.url = jdbc:mysql://192.168.1.82:3306/springboot_db
+#source.username = root
+#source.password = 333dkx8s
