--- a/tq.java.spring.boot/src/main/resources/application.properties
+++ b/tq.java.spring.boot/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 debug=true
 
+# tomcat
+server.port= 8098
+
 #server.compression.enabled=true
 #server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
 #server.compression.min-response-size=10
