--- a/tq.java.zookeeper/pom.xml
+++ b/tq.java.zookeeper/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>tq.java.zookeeper</artifactId>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.6</version>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
