--- a/tq.java.kafka/pom.xml
+++ b/tq.java.kafka/pom.xml
@@ -18,6 +18,14 @@
             <version>0.9.0.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
+
         <!-- 添加log4j -->
         <dependency>
             <groupId>log4j</groupId>
