--- a/tq.java.spring.boot/src/main/resources/application.yml
+++ b/tq.java.spring.boot/src/main/resources/application.yml
@@ -13,3 +13,15 @@ spring:
         max-wait: -1
         max-idle: 8
         min-idle: 0
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/test
+    password: 123456
+    driver-class-name: com.mysql.jdbc.Driver
+    max-idle: 10
+    max-wait: 10000
+    min-idle: 5
+    initial-size: 5
+
+server:
+  port:  8011
+  tomcat.uri-encoding:  UTF-8
